--- a/Exercise3/README
+++ b/Exercise3/README
@@ -1,4 +1,1 @@
-This is Kendo UI Trial package, which contains a trial version of the respective Kendo UI commercial product.
-
-Please refer to the EULA licensing terms (present in the license-agreements folder) for more info. 
-
+list-description application which is used to keep track information 
